--- a/ProyectoLenguajesBasesDeDatos/src/main/java/com/mycompany/proyectolenguajesbasesdedatos/Menu.form
+++ b/ProyectoLenguajesBasesDeDatos/src/main/java/com/mycompany/proyectolenguajesbasesdedatos/Menu.form
@@ -48,7 +48,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Edit"/>
+            <Property name="text" type="java.lang.String" value="Facturas"/>
           </Properties>
         </Menu>
       </SubComponents>
